--- a/hack49/package.json
+++ b/hack49/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.21.0",
     "fft.js": "^4.0.4",
     "heatmap.js": "^2.0.5",
     "plotly.js-dist": "^2.35.2",
